<resources>
    <string name="app_name">KYF</string>
    <string name="action_search">Search</string>
    <string name="first_name">First Name</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="date">Date of Birth</string>
    <string name="last_name">Last Name</string>
    <string name="farmer_organisation">Farmer Organisation</string>
    <string name="acreage">Acreage</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="crop">Crop</string>
    <string name="farmer">Farmer Name</string>
    <string name="variety">Variety</string>
    <string name="phone">Phone Number</string>
    <string name="supply">Supply This Produce</string>
    <string name="farmer_id">Farmer ID</string>
    <string name="quantity">Quantity</string>
    <string-array name="describe">
        <item>New</item>
        <item>Old</item>
    </string-array>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="country">Country</string>
    <string-array name="district">
        <item>Abim</item>
        <item>Adjumani</item>
        <item>Agago</item>
        <item>Alebtong</item>
        <item>Amolatar</item>
        <item>Amudat</item>
        <item>Amuria</item>
        <item>Amuru</item>
        <item>Apac</item>
        <item>Arua</item>
        <item>Budaka</item>
        <item> Bududa</item>
        <item>Bugiri</item>
        <item>Buhweju</item>
        <item>Buikwe</item>
        <item>Bukedea</item>
        <item>Bukomansimbi</item>
        <item>Bukwa</item>
        <item>Bulambuli</item>
        <item>Buliisa</item>
        <item>Bundibugyo</item>
        <item>Bushenyi</item>
        <item>Busia</item>
        <item>Butaleja</item>
        <item>Butambala</item>
        <item>Buvuma</item>
        <item>Buyende</item>
        <item>Dokolo</item>
        <item>Gomba</item>
        <item>Gulu</item>
        <item>Hoima</item>
        <item>Ibanda</item>
        <item>Iganga</item>
        <item>Isingiro</item>
        <item>Jinja</item>
        <item>Kaabong</item>
        <item>Kabale</item>
        <item>Kabarole</item>
        <item>Kaberamaido</item>
        <item>Kalangala</item>
        <item>Kaliro</item>
        <item>Kalungu</item>
        <item>Kampala</item>
        <item>Kamuli</item>
        <item>Kamwenge</item>
        <item>Kanungu</item>
        <item>Kapchorwa</item>
        <item>Kasese</item>
        <item>Katakwi</item>
        <item>Kayunga</item>
        <item>Kibaale</item>
        <item>Kiboga</item>
        <item>Kibuku</item>
        <item>Kiruhura</item>
        <item>Kiryandongo</item>
        <item>Kisoro</item>
        <item>Kitgum</item>
        <item>Koboko</item>
        <item>Kole</item>
        <item>Kotido</item>
        <item>Kumi</item>
        <item>Kween</item>
        <item>Kyankwanzi</item>
        <item>Kyegegwa</item>
        <item>Kyenjojo</item>
        <item>Lamwo</item>
        <item>Lira</item>
        <item>Luuka</item>
        <item>Luweero</item>
        <item>Lwengo</item>
        <item>Lyantonde</item>
        <item>Manafwa</item>
        <item>Maracha</item>
        <item>Masaka</item>
        <item>Masindi</item>
        <item>Mayuge</item>
        <item>Mbale</item>
        <item>Mbarara</item>
        <item>Mitooma</item>
        <item>Mityana</item>
        <item>Moroto</item>
        <item>Moyo</item>
        <item>Mpigi</item>
        <item>Mubende</item>
        <item>Mukono</item>
        <item>Nakapiripirit</item>
        <item>Nakaseke</item>
        <item>Nakasongola</item>
        <item>Namayingo</item>
        <item>Namutumba</item>
        <item>Napak</item>
        <item>Nebbi</item>
        <item>Ngora</item>
        <item>Ntoroko</item>
        <item>Ntungamo</item>
        <item>Nwoya</item>
        <item>Otuke</item>
        <item>Oyam</item>
        <item>Pader</item>
        <item>Pallisa</item>
        <item>Rakai</item>
        <item>Serere</item>
        <item>Sironko</item>
        <item>Soroti</item>
        <item>Tororo</item>
        <item>Rubirizi</item>
        <item>Rukungiri</item>
        <item>Sheema</item>
        <item>Ssembabule</item>
        <item>Wakiso</item>
        <item>Yumbe</item>
        <item>Zombo</item>
    </string-array>
    <string name="sub_county">Sub County</string>
    <string name="parish">Parish</string>
    <string name="number_of_farmers">Number of Farmers</string>
    <string name="village">Village</string>
    <string name="KYU_page">EZYAGRIC</string>
    <string name="KYA_page">Agent Data</string>
    <string name="submit">Save</string>
    <string name="my_farmers">My Farmers</string>
    <string name="next">Next</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">Name too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="crops">
        <item>Maize</item>
        <item>Beans</item>
        <item>Bananas</item>
        <item>Coffee</item>
        <item>Rice</item>
        <item>Sorghum</item>
        <item>Groundnuts</item>
        <item>SimSim</item>
        <item>Soya beans</item>
        <item>Irish Potatoes</item>
        <item>Cassava</item>
        <item>Peas</item>
        <item>Cabbage</item>
        <item>Onion</item>
        <item>Sweet Potatoes</item>
    </string-array>
</resources>