<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.raphael.ezyagric.Fragments.AddAgentFragment">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/first_name"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/first_Name"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:text="@string/last_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/last_Name"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/phone_number"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:text="@string/farmer_organisation"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/farmer_organisation"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#000000"
                android:text="@string/gender"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/genderSpinner"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender" />

            <LinearLayout
                android:id="@+id/layout_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/district"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="#000000"
                    android:text="@string/district"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/districtSpinner"
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/district" />
            </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/village"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/village"
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:text="@string/number_of_farmers"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/number_farmers"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:text="@string/date"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/my_dob"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <ImageView
                android:id="@+id/iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/my_button"
                android:text="@string/upload_photo"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/uploadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/my_button"
                android:text="@string/submit"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>
